--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "my-test": "jest tests/functions.spec.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
